Add rainbow functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <p><button>Change Grid Size</button></p>
+    <p><button id="grid-size-change">Change Grid Size</button></p>
+    <p><button id="toggle">Rainbow Mode Toggle</button></p>
     <div class="grid"></div>
 </body>
 </html>
